--- a/WorkProject/Views/User/Index.cshtml
+++ b/WorkProject/Views/User/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WorkProject.Models.User>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "User List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
