--- a/WorkProject/Views/User/Index.cshtml
+++ b/WorkProject/Views/User/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>User List</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New User", "Create")
 </p>
 <table class="table">
     <tr>
